--- a/src/main/resources/persistence-postgresql.properties
+++ b/src/main/resources/persistence-postgresql.properties
@@ -1,8 +1,8 @@
 # jdbc.X
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/timex
-jdbc.user=postgres
-jdbc.pass=gfDkeynbq
+jdbc.user=timex_user
+jdbc.pass=123timeX321
  
 # hibernate.X
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
