--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,5 +14,9 @@
 			<page-encoding>UTF-8</page-encoding>
 		</jsp-property-group>
 	</jsp-config>
-
+	
+    <session-config>
+        <session-timeout>60</session-timeout>
+    </session-config>
+    
 </web-app>
